# domain/openapi.swagger.json
@@ -12,6 +12,9 @@
   },
   "tags": [
     {
+      "name": "HealthService"
+    },
+    {
       "name": "AccountService"
     },
     {
@@ -28,6 +31,52 @@
     "application/json"
   ],
   "paths": {
+    "/v1/health": {
+      "get": {
+        "operationId": "HealthService_Check",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1BoolResponse"
+            }
+          },
+          "400": {
+            "description": "Bad request.",
+            "schema": {
+              "$ref": "#/definitions/v1ErrorResponse"
+            }
+          },
+          "403": {
+            "description": "Unauthorized.",
+            "schema": {
+              "$ref": "#/definitions/protobufEmpty"
+            }
+          },
+          "404": {
+            "description": "Not found.",
+            "schema": {
+              "$ref": "#/definitions/protobufEmpty"
+            }
+          },
+          "500": {
+            "description": "Server error.",
+            "schema": {
+              "$ref": "#/definitions/protobufEmpty"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "HealthService"
+        ]
+      }
+    },
     "/v1/{tenant}/accounts/{scope}/me": {
       "get": {
         "operationId": "AccountService_CurrentAccount",
@@ -556,6 +605,14 @@
         "lastLogin": {
           "type": "string",
           "format": "date-time"
+        }
+      }
+    },
+    "v1BoolResponse": {
+      "type": "object",
+      "properties": {
+        "success": {
+          "type": "boolean"
         }
       }
     },
